# rtl-wmbus-ng

./: CMakeLists.txt  LICENSE  Makefile  atan2.h  buffers.c  fifo.c  main.c  queue.c  rtl_wmbus.c  t1_c1_decoder.c  t1_c1_packet_decoder.h  t1_c1_polar_discriminator.c  t1_c1_polar_discriminator.h
.github/workflows/: c-cpp.yml
filter_plot/: ema_vs_ma.m
src/: buffers.h  config.c  config.h  dump.c  dump.h  fifo.c  fifo.h  fir.h  logging.c  logging.h  main.c  moving_average_filter.h  queue.h  rtl_wmbus_util.c  rtl_wmbus_util.h  t1_c1_decimator.c  t1_c1_decimator.h  t1_c1_decoder.c  t1_c1_decoder.h  t1_c1_packet_decoder.h  t1_c1_polar_discriminator.c
